# NetworkManager-VPN-bundle

./: .gitignore  .pylintrc  CMakeLists.txt  Makefile  PKGBUILD  README.md  nm-xxx-service.conf.in  nm-xxx-service.name.in  plasma_nm_plugin_metadata.json.in  ref.md  requirements.txt  setup.sh
auth-dialog/: CMakeLists.txt  auth-dialog.cpp  auth-dialog.h
common/: nm-service-defines.h
common/plasma/: README.md  passwordfield.h
plasma-nm-applet-ui/: CMakeLists.txt  authprompt.cpp  authprompt.h  plugin.cpp  plugin.h  settingview.cpp  settingview.h  shared.h
plugin-service/: common.py  n2n_ctl.py  nebula_ctl.py  nm-vpn-plugin.xml  provider-exec  service.py  tailscale_ctl.py  tinc_ctl.py  utils.py  weron_ctl.py  zerotier_ctl.py
plugin-service/ref/: connection.json  tailscale.status.json
property-editor/: CMakeLists.txt  nm-vpn-plugin-utils.h  plugin.cpp  plugin.h  widget.cpp  widget.h
providers/: n2n.json  nebula.json  tailscale.json  tinc.json  weron.json  zerotier.json
scripts/: tailscale-ctl
test-gtk4-editor/: CMakeLists.txt  main.cpp
